--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -28,8 +28,13 @@
             <td th:text="${user.age} ?: 'N/A'"></td>
             <td>
                 <a th:href="@{/edit/{id}(id=${user.id})}" class="btn btn-warning btn-sm">Edit</a>
-                <a th:href="@{/delete/{id}(id=${user.id})}" class="btn btn-danger btn-sm"
-                   onclick="return confirm('Are you sure you want to delete this user?')">Delete</a>
+
+                <form th:action="@{/delete/{id}(id=${user.id})}" method="post" style="display:inline;">
+                    <button type="submit" class="btn btn-danger btn-sm"
+                            onclick="return confirm('Are you sure you want to delete this user?')">
+                        Delete
+                    </button>
+                </form>
             </td>
         </tr>
         </tbody>
